--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BS'
 - !lcsh 'Bible. Obadiah'
+- GITenberg
 title: 'The Bible, King James version, Book 31: Obadiah'
 url: http://www.gutenberg.org/ebooks/8031
